# euro2024-flask

./: .gitignore  README.md  README.rst  app.py  config_example.yaml  definitions.py  load.py  pyproject.toml  query.py  test_config.py
forms/: user_forms.py
helpers/: config.py
models/: base.py
static/css/: custom.css
templates/: 404.html  500.html  add_user.html  admin.html  base.html  dashboard.html  index.html  login.html  name.html  navbar.html  predictions.html  register.html  rules.html  scoring.html  user.html  user_profile.html  wildcard_groups.html
